--- a/docs/modules/reference/pages/daemons/daemon-config-files/pollerd.adoc
+++ b/docs/modules/reference/pages/daemons/daemon-config-files/pollerd.adoc
@@ -18,7 +18,7 @@ Performs xref:operation:deep-dive/service-assurance/introduction.adoc[service as
 | Contains service monitor configurations for service availability checks and global daemon configuration. +
 Restart is required when monitors are created or removed. +
 A reload event loads changed configuration parameters of existing monitors, but will not load new monitors. +
-In addition, a reload event will load changes within a package definition. Outside of a package definition that is either an element or attribute of `poller-configuration`, a restart is required for the changes to take effect. 
+A reload event loads changes within a package definition including `filter`, `include-range` and `exclude-range`. Outside of a package definition that is either an element or attribute of `poller-configuration`, a restart is required for the changes to take effect. 
 | Yes
 | Yes
 
